applied function that resets game

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
 <br/>
 
-	Your guesses so far: <span id="playerGuess"></span>
-
+	Your guesses so far: <span id="userGuess"></span>
 
 </body>
 </html>
